fix: text align in edit user input

--- a/src/components/EditUser.css
+++ b/src/components/EditUser.css
@@ -49,3 +49,7 @@
   transition: .5s;
   color: black;
 }
+
+input {
+  text-align: center;
+}
